--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -135,7 +135,7 @@
 											<label class="form-check-label"></label>
 										</div>
 									</th>
-									<th>Family Serial Number</th>
+									<th>Serial Number</th>
 									<th>Name</th>
 									<th style="text-align: center;">Remarks</th>
 									<th style="text-align: center;">Status</th>
