--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -45,7 +45,7 @@
 
                 <div class="row g-3 p-5 text-center">
                     <div class="col-md-6">
-                        <img src="/images/1.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
+                        <img src="/images/tagala.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Agatha Gwen Tagala</h5>
                     </div>
 
