changed file name of generated pdf

--- a/Pages/Disaster/Profile/Report.cshtml
+++ b/Pages/Disaster/Profile/Report.cshtml
@@ -230,7 +230,7 @@
                 pdf.addPage('l', 'pt', [PDF_Width, PDF_Height]);
                 pdf.addImage(imgData, 'JPG', top_left_margin, -(PDF_Height * i) + (top_left_margin * 4), canvas_image_width, canvas_image_height);
             }
-            pdf.save("Your_PDF_Name.pdf");
+            pdf.save("Agapay Aid Report.pdf");
             $("#makepdf").show(); // Show the content after generating PDF
         });
     }
