--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Agapay Aid";
 }
 
 <html>
@@ -10,123 +10,138 @@
     </head>
     <body>
         <!--LINKS-->
-
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
         <!--MAIN-->
-            <div class="head-title">
-                <div>
-                    @*<h2>Home</h2>*@
-                    <h3 class="sub-title">Hello, Welcome to Agapay Aid</h3>
-                </div>
+        <div class="head-title">
+            <div>
+                @*<h2>Home</h2>*@
+                <h3 class="sub-title">Hello, Welcome to Agapay Aid</h3>
             </div>
-        
-            <div class="container form-container1">
-	            <div class="container form-container-content1">
-                    <h1>Gaya-gaya Fire</h1>
-	            </div>
+        </div>
 
-                <div class="dashcontent">
-                    <div class="boxinfo">
-                        <div class="infoitem">
-                            <i class="bi bi-person"></i>
-                            <div class="text">
-                                <h3 class="dashtitle">1467</h3>
-                                <p><b>Total Evacuees</b></p>
-                                <div class="box-stat">
-                                    <small>Male: <span>673</span></small>
-                                    <small>Female: <span>794</span></small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="infoitem">
-                            <i class="bi bi-people"></i>
-                            <div class="text">
-                                <h3 class="dashtitle">293</h3>
-                                <p><b>Total Families</b></p>
-                            </div>
-                        </div>
-
-                        <div class="infoitem">
-                            <i class="bi bi-building-fill"></i>
-                            <div class="text">
-                                <h3 class="dashtitle">2</h3>
-                                <p><b>Total Active</b></p>
-                                <p><b>Evacuation Centers</b></p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="container form-container1">
-	            <div class="container form-container-content1">
-                    <div>
-                        <h2>Evacuation Center</h2>
-                    </div>
-	            </div>
-
-                <!-- Table -->
+        <div class="container form-container1">
+            <div class="container form-container-content1">
                 <div class="row p-2">
-                    <div class="col-lg-12">
-                        <div class="container table-container">
-                            <table id="ec" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Name</th>
-                                        <th>Barangay</th>
-						                <th>Occupancy</th>
-						                <th>Status</th>
-                                    </tr>
-                                </thead>
+                    <div class="col d-flex align-items-center">
+                        <h1>@Model.disasterInfo.disasterName</h1>
+                    </div>
 
-                                <tbody>
-                                    <tr>
-                                        <th>1</th>
-						                <th>Sagip Relief Center</th>
-                                        <th>Dulong Bayan</th>
-						                <th>
-                                            <div class="progress"></div>
-                                            1001/2000
-                                        </th>
-                                        <th>    
-                                            <span class="badge bg-success">Active</span>
-                                        </th>
-						            </tr>
-                                    <tr>
-                                        <th>2</th>
-								        <th>Sapang Palay Elementary School</th>
-                                        <th>Sapang Palay Proper</th>
-								        <th>
-                                            <div class="progress"></div>
-                                            256/250
-                                        </th>
-								        <th>
-                                            <span class="badge bg-success">Active</span>
-                                        </th>
+                    <div class="col-auto button-spacer">
+                        <!-- Button with text and icon (visible on larger screens) -->
+                        <button id="toggleButton" class="btn d-none d-md-inline-block"
+                            onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
+                            data-bs-toggle="modal" data-bs-target="#infoModal">
+                            <i class="bi bi-info-circle-fill"></i> Info
+                        </button>
 
-                                        @*<td width="10%" style="text-align: center;">
-                                        @if (@item.status == "Active")
-                                        {
-                                        <span class="badge bg-success">@item.status</span>
-                                        }
-                                        else if (@item.status == "Inactive")
-                                        {
-                                        <span class="badge rounded-pill bg-light">@item.status</span>
-                                        }
-                                        </td>*@
-
-							        </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        <!-- Button with icon only (visible on smaller screens) -->
+                        <button id="toggleButtonMobile" class="btn d-inline-block d-md-none"
+                            onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
+                            data-bs-toggle="modal" data-bs-target="#infoModal">
+                            <i class="bi bi-info-circle-fill"></i>
+                        </button>
                     </div>
                 </div>
             </div>
+            
+            <div class="dashcontent">
+                <div class="boxinfo">
+                    <div class="infoitem">
+                        <i class="bi bi-people"></i>
+                        <div class="text">
+                            <h3 class="dashtitle">@Model.GetTotalDistinctEvacueesCount(Model.disasterInfo.disasterID)</h3>
+                            <p><b>Total Evacuees</b></p>
+                            <div class="box-stat">
+                                <small>Check-in: <span>@Model.GetTotalCheckInCount(Model.disasterInfo.disasterID)</span></small>
+                            <small>Check-out: <span>@Model.GetTotalCheckOutCount(Model.disasterInfo.disasterID)</span></small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="infoitem">
+                    <i class="bi bi-buildings-fill"></i>
+                        <div class="text">
+                            <h3 class="dashtitle">@Model.GetTotalDistinctBarangaysCount(Model.disasterInfo.disasterID)</h3>
+                            <p><b>Total Affected Brgys</b></p>
+                            <div class="box-stat">
+                                <small>Families: <span>@Model.GetTotalDistinctFamiliesCount(Model.disasterInfo.disasterID)</span></small>
+                                <small>Male: <span>@Model.GetTotalDistinctFemaleCount(Model.disasterInfo.disasterID)</span></small>
+                                <small>Female: <span>@Model.GetTotalDistinctMaleCount(Model.disasterInfo.disasterID)</span></small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="infoitem">
+                        <i class="bi bi-building-fill"></i>
+                        <div class="text">
+                            <h3 class="dashtitle">@Model.GetTotalCenterCount(Model.disasterInfo.disasterID)</h3>
+                            <p><b>Total Evacuation Centers</b></p>
+                            <div class="box-stat">
+                                <small>Open: <span>@Model.GetTotalOpenCenterCount(Model.disasterInfo.disasterID)</span></small>
+                                <small>Closed: <span>@Model.GetTotalClosedCenterCount(Model.disasterInfo.disasterID)</span></small>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="container form-container1">
+            <div class="container form-container-content1">
+                <div>
+                    <h2>Evacuation Center</h2>
+                </div>
+            </div>
+
+            <!-- Table -->
+            <div class="row p-2">
+                <div class="col-lg-12">
+                    <div class="container table-container">
+                        <table id="ec" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Name</th>
+                                    <th>Barangay</th>
+                                    <th>Occupancy</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{ var counter = 1; }
+                                @foreach (var item in Model.listCenterLog)
+                                {
+                                    <tr>
+                                        <td width="5%">@counter</td>
+                                        <td width="25%">@item.centerName</td>
+                                        <td width="25%" style="text-align: center;">@item.barangayName</td>
+                                        <td width="25%" style="text-align: center;">
+                                            <div class="progress-container">
+                                                <!-- Progress bar will be added dynamically here -->
+                                            </div>
+                                            <span class="occupancy-text">@item.occupancy/@item.maxCapacity</span>
+                                        </td>
+                                        <td width="20%" style="text-align: center;">
+                                            @if (@item.status == "Open")
+                                            {
+                                                <span class="badge bg-success">@item.status</span>
+                                            }
+                                            else if (@item.status == "Closed")
+                                            {
+                                                <span class="badge rounded-pill bg-light">@item.status</span>
+                                            }
+                                        </td>
+                                    </tr>
+                                    counter++;
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
@@ -174,3 +189,45 @@
         }
     });
 </script>
+
+<!-- Modal: Disaster Information -->
+<div class="modal fade" id="infoModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Disaster Information</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <table>
+                    <tr>
+                        <th class="text-start pe-4">Type</th>
+                        <td id="disasterType" class="text-start"></td>
+                    </tr>
+                    <tr>
+                        <th class="text-start pe-4">Description</th>
+                        <td id="description" class="text-start"></td>
+                    </tr>
+                    <tr>
+                        <th class="text-start pe-4">Date Occurred</th>
+                        <td id="dateOccured" class="text-start"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Disaster Information Modal -->
+<script>
+    function showInfo(disasterType, description, dateOccured) {
+        // Set the content of the modal with the provided info
+        document.getElementById('disasterType').innerText = disasterType;
+        document.getElementById('description').innerText = description;
+        document.getElementById('dateOccured').innerText = dateOccured;
+    }
+</script>
+
