Minor change in about page

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -70,7 +70,7 @@
         <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
                 <div class="p-4 mb-3 bg-light rounded">
-                    <h4 class="fst-italic pb-1">Do you know?</h4>
+                    <h4 class="fst-italic pb-1">Did you know?</h4>
                     <p class="mb-0">
                         In 2022, the World Risk Report listed the <b>Philippines as the 1st most disaster-prone country</b> because of its high risk, exposure, and vulnerability to
                         natural catastrophes and calamities such as earthquakes, typhoons, storm surges, tsunamis, volcanic eruptions, and flooding.
