--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -22,64 +22,52 @@
 
     <!-- Your Local JavaScript Files -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="/green-logo.svg" class="bi me-2 pb-2" width="60" height="50" alt="Green Logo">
+                <span class="fs-4"><b>Agapay</b>Aid</span>
+            </a>
 
-    <!-- Top Navigation Bar -->
-    <div id="top-nav">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary shadow-lg mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/index">
-                    <img src="/white-logo-horizontal.png" alt="" height="30" id="logo" style="margin-left: 15px;">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                    <ul class="navbar-nav" style="padding: 5px 10px 10px 0;">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/disaster/index">Disaster</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/evacuationcenter/index">Evacuation Center</a>
-                        </li>
-                        <!-- li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
-                            <ul class="dropdown-menu" data-bs-theme="light">
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/family/index">Family</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ecstaff/index">EC Staff</a></li>
-                            </ul>
-                        </li -->
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/family/index">Family</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/ecstaff/index">EC Staff</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/inventory/index">Inventory</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/usermanagement/index">Users</a>
-                        </li>
-                        @*<li class="nav-item">
-                            <a href="#" class="profile">
-                                <img src="~/sample-pic.jpg" alt="User Profile">
-                            </a>
-                        </li>*@
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#top-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="top-navbar">
+                <ul class="navbar-nav m-auto mb-2 mb-md-0">
+                    <li><a href="/index" class="nav-link px-3 text-secondary">Home</a></li>
+                    <li><a href="/disaster/index" class="nav-link px-3 text-white">Disaster</a></li>
+                    <li><a href="/evacuationcenter/index" class="nav-link px-3 text-white">Centers</a></li>
+                    <li><a href="/family/index" class="nav-link px-3 text-white">Family</a></li>
+                    <li><a href="/ecstaff/index" class="nav-link px-3 text-white">EC Staff</a></li>
+                    <li><a href="/inventory/index" class="nav-link px-3 text-white">Inventory</a></li>
+                    <li><a href="/usermanagement/index" class="nav-link px-3 text-white">Users</a></li>
+                </ul>
+                @* <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="~/sample-pic.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                        <li><a class="dropdown-item" href="#">Notification.</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Sign out</a></li>
                     </ul>
+                </div> *@
+
+                <div class="text-md-end ps-md-5 ps-3">
+                    <a href="/login" type="button" class="btn btn-secondary text-primary me-2">Login</a>
                 </div>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
 
-    <main role="main" class="pb-3 pt-3 px-3 px-md-4">
+    <main role="main" class="pt-5">
         @RenderBody()
     </main>
 
@@ -91,4 +79,5 @@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
