Minor adjustment in text alignment

--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -93,8 +93,8 @@
 						<tr>
 							<td width="5%">@counter</td>
 							<td width="25%">@item.centerName</td>
-							<td width="20%">@item.centerType</td>
-							<td width="25%">@item.barangayName</td>
+							<td width="20%" style="text-align: center;">@item.centerType</td>
+							<td width="25%" style="text-align: center;">@item.barangayName</td>
 							<td width="10%" style="text-align: center;">@item.maxCapacity</td>
 							<td width="10%" style="text-align: center;">
 								@if (@item.status == "Active")
