Added href to logo in navbar. Added view more button in home page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -41,6 +41,11 @@
                             data-bs-toggle="modal" data-bs-target="#infoModal">
                             <i class="bi bi-info-circle-fill"></i>
                         </button>
+
+                        <!-- Button with text and icon (visible on larger screens) -->
+                        <a href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline position-relative"  role="button">
+                            View More <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
             </div>
