--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index">
                 <img src="/green-logo.svg" class="bi me-2 pb-2" width="60" height="50" alt="Green Logo">
                 <span class="fs-4"><b>Agapay</b>Aid</span>
             </a>
