--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -192,7 +192,7 @@
                                 </div>
                                 <span class="occupancy-text">@item.occupancy/@item.maxCapacity</span>
                              </td>
-                            <td width="15%" style="text-align: center;">
+                            <td width="10%" style="text-align: center;">
                                 @if (@item.status == "Open")
                                 {
                                     <span class="badge bg-success">@item.status</span>
@@ -202,7 +202,7 @@
                                     <span class="badge rounded-pill bg-light">@item.status</span>
                                 }
                             </td>
-                            <td width="5%">
+                            @*<td width="5%">
                                 <div class="d-inline position-relative">
                                     <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="bi bi-three-dots-vertical"></i>
@@ -220,6 +220,11 @@
                                         </li>
                                     </ul>
                                 </div>
+                            </td>*@
+                            <td width="10%">
+                                <a class="btn btn-success edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+                                    View
+                                </a>
                             </td>
                         </tr>
                         counter++;
