--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -319,7 +319,7 @@
 			var filterContainer = $('<div class="dropdown"></div>').appendTo($(column.header()));
 
 			// Create a button to toggle the dropdown
-			var btn = $('<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>')
+			var btn = $('<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>')
 				.appendTo(filterContainer);
 
 			// Create a dropdown menu
