--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -43,8 +43,13 @@
                         </button>
 
                         <!-- Button with text and icon (visible on larger screens) -->
-                        <a href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline position-relative"  role="button">
+                    <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
                             View More <i class="bi bi-arrow-right"></i>
+                        </a>
+
+                        <!-- Button with text and icon (visible on larger screens) -->
+                    <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
+                            <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -156,7 +161,8 @@
         var table = $('#ec').DataTable({
             responsive: true,
             columnDefs: [
-                { "orderable": true, "targets": [0, 1, 2, 3, 4] }
+                { "orderable": true, "targets": [0, 1] }, //Sortable columns
+                { "orderable": false, "targets": [2, 3, 4] } // Non-sortable columns
             ],
             initComplete: function () {
                 var rows = this.api().rows({ page: 'current' }).nodes();
