Minor change in text alignment of table

--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -63,9 +63,9 @@
                                         </div>
                                     </td>
                                     <td width="30%">@item.centerName</td>
-                                    <td width="20%">@item.centerType</td>
-                                    <td width="30%">@item.barangayName</td>
-                                    <td width="15%">@item.maxCapacity</td>
+                                    <td width="20%" style="text-align: center;">@item.centerType</td>
+                                    <td width="30%" style="text-align: center;">@item.barangayName</td>
+                                    <td width="15%" style="text-align: center;">@item.maxCapacity</td>
                                 </tr>
                             }
                         </tbody>
