--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -53,7 +53,7 @@
         <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-                <li class="breadcrumb-item"><a href ="/index">Disaster</a></li>
+                <li class="breadcrumb-item"><a href ="/disaster/index">Disaster</a></li>
                 <li class="breadcrumb-item active"><a><strong>@Model.disasterInfo.disasterName</strong></a></li>
             </ol>
         </nav>
