modified view more icon

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -43,13 +43,13 @@
                         </button>
 
                         <!-- Button with text and icon (visible on larger screens) -->
-                    <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
-                            View More <i class="bi bi-arrow-right"></i>
+                        <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
+                            View More <i class="bi bi-arrow-right-circle"></i>
                         </a>
 
-                        <!-- Button with text and icon (visible on larger screens) -->
-                    <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
-                            <i class="bi bi-arrow-right"></i>
+                        <!-- Button with text and icon (visible on smaller screens) -->
+                        <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
+                            <i class="bi bi-arrow-right-circle"></i>
                         </a>
                     </div>
                 </div>
