--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
         </div>
     </nav>
 
-    <main role="main" class="pt-5">
+    <main role="main" class="container pt-5 pb-5">
         @RenderBody()
     </main>
 
