--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -12,48 +12,38 @@
 	</div>
 }
 
-<div class="container p-2 form-container">
-	
-	<div class="container mt-4 form-container-content">
-		<div class="row">
-			<div class="col text-center">
-				<h1>Add New User</h1>
-			</div>
-		</div>
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-6 mx-auto">
+		<form method="POST">
+			<h1 class="display-5 fw-bold">Add New User</h1>
+			<label class="form-label">User Type:</label>
 
-		<div class="row pt-4">
-			<form method="POST">
-				<div class="row mb-3 user-container justify-content-center">
-					<div class="col-md-4">
-						<label class="form-label">User Type:</label>
+			<div class="p-3">
+				<div class="form-check d-flex align-items-center">
+					<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
+					@if (Model.userInfo.userType == "Admin")
+					{
+						<text>checked</text>
+					}>
+					<label class="form-check-label">Admin</label>
+				</div>
 
-						<div class="form-check d-flex align-items-center">
-							<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
-							@if (Model.userInfo.userType == "Admin")
-							{
-								<text>checked</text>
-							}>
-							<label class="form-check-label">Admin</label>
-						</div>
+				<div class="form-check d-flex align-items-center">
+					<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
+					@if (Model.userInfo.userType == "LGU Staff")
+					{
+						<text>checked</text>
+					}>
+					<label class="form-check-label">LGU Staff</label>
+				</div>
 
-						<div class="form-check d-flex align-items-center">
-							<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
-							@if (Model.userInfo.userType == "LGU Staff")
-							{
-								<text>checked</text>
-							}>
-							<label class="form-check-label">LGU Staff</label>
-						</div>
-
-						<div class="form-check d-flex align-items-center">
-							<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
-							@if (Model.userInfo.userType == "EC Staff")
-							{
-								<text>checked</text>
-							}>
-							<label class="form-check-label">EC Staff</label>
-						</div>
-					</div>
+				<div class="form-check d-flex align-items-center">
+					<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
+					@if (Model.userInfo.userType == "EC Staff")
+					{
+						<text>checked</text>
+					}>
+					<label class="form-check-label">EC Staff</label>
 				</div>
 
 				<input type="hidden" name="userInfo.userType" value="@Model.userInfo.userType" />
@@ -70,17 +60,17 @@
 						</div>
 					</div>
 				}
+			</div>
 
-				<!-- Cancel and Save Button -->
-				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/usermanagement/index" role="button">Cancel</a>
-					<button type="submit" class="btn btn-primary" id="submitBtn">
-						Next
-						<i class="bi bi-arrow-right" style="padding:5px"></i>
-					</button>
-				</div>
-			</form>
-		</div>
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<button type="button" class="btn btn-primary px-4" id="submitBtn">
+					Next
+					<i class="bi bi-arrow-right" style="padding:5px"></i>
+				</button>
+				<a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+			</div>
+		</form>
 	</div>
 </div>
 
