--- a/Pages/UserManagement/Admin/Add.cshtml
+++ b/Pages/UserManagement/Admin/Add.cshtml
@@ -12,44 +12,42 @@
     </div>
 }
 
-<div class="container p-2 form-container">
-    <div class="container mt-4 form-container-content">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Add User</h1>
-                <h6 class="text-dark">Admin</h6>
-            </div>
-        </div>
-        <form method="POST">
-            <div class="row mb-3 user-container">
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-6 mx-auto">
+		<form method="POST">
+            <h1 class="display-5 fw-bold">Add New User</h1>
 
-                <!-- Admin Name -->
-                <div class="mb-3">
-                    <label class="form-label" for="InputAdminName">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
+            <br />
+
+            <!-- Admin Name -->
+            <div class="mb-3 row">
+                <label class="col-sm-4 col-form-label" for="adminName">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
                     <input type="text" id="adminName" name="adminName" class="form-control" required maxlength="65" />
                 </div>
-
-                <input type="hidden" name="userID" value="@Model.userID" />
-
-                @if (!string.IsNullOrEmpty(Model.successMessage))
-                {
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <strong>@Model.successMessage</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                }
-
-                <!-- Cancel and Save Button -->
-                <div class="button-spacer">
-                    <a class="btn btn-outline-secondary mr-10" href="/usermanagement/admin/add?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">
-                        Cancel
-                    </a>
-                    <button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
-                </div>
             </div>
-        </form>
-    </div>
+
+            <input type="hidden" name="userID" value="@Model.userID" />
+
+            @if (!string.IsNullOrEmpty(Model.successMessage))
+            {
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>@Model.successMessage</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
+            <br />
+
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<button type="button" class="btn btn-primary px-4" id="submitBtn">Save</button>
+                <a href="/usermanagement/admin/add?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+			</div>
+		</form>
+	</div>
 </div>
+
 
 <script>
     const submitButton = document.getElementById('submitBtn');
