--- a/Pages/UserManagement/Admin/Add.cshtml
+++ b/Pages/UserManagement/Admin/Add.cshtml
@@ -21,7 +21,7 @@
             <br />
 
             <!-- Admin Name -->
-            <div class="mb-3 row">
+            <div class="row">
                 <label class="col-sm-4 col-form-label" for="adminName">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
                 <div class="col-sm-8">
                     <input type="text" id="adminName" name="adminName" class="form-control" required maxlength="65" />
