--- a/Pages/UserManagement/Admin/Add.cshtml
+++ b/Pages/UserManagement/Admin/Add.cshtml
@@ -42,7 +42,7 @@
 
 			<!-- Cancel and Save Button -->
 			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-				<button type="button" class="btn btn-primary px-4" id="submitBtn">Save</button>
+				<button type="submit" class="btn btn-primary px-4" id="submitBtn">Save</button>
                 <a href="/usermanagement/admin/add?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
 			</div>
 		</form>
