Minor fixes for buttons.

--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -64,7 +64,7 @@
 
 			<!-- Cancel and Save Button -->
 			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-				<button type="button" class="btn btn-primary px-4" id="submitBtn">
+				<button type="submit" class="btn btn-primary px-4" id="submitBtn">
 					Next
 					<i class="bi bi-arrow-right" style="padding:5px"></i>
 				</button>
