--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -111,7 +111,7 @@
 
             <!-- Cancel and Save Button -->
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="submit" class="btn btn-primary px-4" id="submitBtn" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+                <button type="button" class="btn btn-primary px-4" id="submitBtn" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
                 <a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
             </div>
         </form>
