Edited the value of mobile number.

--- a/Pages/UserManagement/ECStaff/Edit.cshtml
+++ b/Pages/UserManagement/ECStaff/Edit.cshtml
@@ -86,7 +86,7 @@
             <div class="row mb-1">
                 <label class="col-sm-4 col-form-label text-start" for="mobileNum">Mobile Num:<span class="text-danger" style="padding:5px">*</span></label>
                 <div class="col-sm-8">
-                    <input type="tel" id="mobileNum" name="mobileNum" class="form-control" value="@Model.birthdate" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
+                    <input type="tel" id="mobileNum" name="mobileNum" class="form-control" value="@Model.mobileNum" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
                 </div>
             </div>
 
