Added record page for each pack

--- a/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
@@ -146,6 +146,7 @@
             </div>
             <div class="modal-body">
                 <p>Are you sure you want to distribute this pack to the evacuee?</p>
+                <p class="text-danger">This cannot be undone.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -154,7 +155,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- Enable/disable "Distribute" button -->
 <script>
