--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -169,6 +169,11 @@
 															View Pack Inclusions</a>
 													</li>
 													<li>
+														<a class="dropdown-item" href="/disaster/profile/reliefgoodspack/record?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
+															View Distribution Record
+														</a>
+													</li>
+													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.packID')"
 														   data-deleteid="@item.packID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
 															Delete
